Improve security and prevent shell injection for push2applications