@@ -37,14 +37,13 @@ public class PushToEmacs extends AbstractPushToApplication {
         couldNotCall = false;
         notDefined = false;
 
-        commandPath = preferences.getCommandPaths().get(this.getDisplayName());
+        String path = preferences.getCommandPaths().get(this.getDisplayName());
+        commandPath = path != null ? path : "";
 
-        if ((commandPath == null) || commandPath.trim().isEmpty()) {
+        if (commandPath.trim().isEmpty()) {
             notDefined = true;
             return;
         }
-
-        commandPath = preferences.getCommandPaths().get(this.getDisplayName());
 
         String keyString = getKeyString(entries, getDelimiter());
 
@@ -87,7 +86,8 @@ public class PushToEmacs extends AbstractPushToApplication {
                   .addArgument(() -> Arrays.toString(com))
                   .log();
 
-            final Process p = Runtime.getRuntime().exec(com);
+            ProcessBuilder processBuilder = new ProcessBuilder(com);
+            final Process p = processBuilder.start();
 
             HeadlessExecutorService.INSTANCE.executeAndWait(() -> {
                 try (InputStream out = p.getErrorStream()) {
@@ -101,9 +101,18 @@ public class PushToEmacs extends AbstractPushToApplication {
                         LOGGER.warn("Could not read from stderr.", e);
                     }
                     // Error stream has been closed. See if there were any errors:
-                    if (!sb.toString().trim().isEmpty()) {
-                        LOGGER.warn("Push to Emacs error: {}", sb);
+                    String error = sb.toString().trim();
+                    if (!error.isEmpty()) {
+                        LOGGER.warn("Push to Emacs error: {}", error);
                         couldNotPush = true;
+                        if (error.contains("can't find socket") || error.contains("No socket or alternate editor")) {
+                            sendErrorNotification(Localization.lang("Error pushing entries"),
+                                    Localization.lang("Could not connect to Emacs. Make sure the server is running.") + " " +
+                                            Localization.lang("In Emacs, type 'M-x server-start' to start it."));
+                        } else {
+                            sendErrorNotification(Localization.lang("Error pushing entries"),
+                                    Localization.lang("Could not push to a running emacs daemon."));
+                        }
                     }
                 } catch (IOException e) {
                     LOGGER.warn("Error handling std streams", e);
@@ -112,14 +121,18 @@ public class PushToEmacs extends AbstractPushToApplication {
         } catch (IOException excep) {
             LOGGER.warn("Problem pushing to Emacs.", excep);
             couldNotCall = true;
+            sendErrorNotification(Localization.lang("Error pushing entries"),
+                    Localization.lang("Could not call executable '%0'.", commandPath) + "\n" +
+                            Localization.lang("Please check the path in the preferences.") + "\n" +
+                            (OS.OS_X ? Localization.lang("On macOS, you can use the command-line binary.") : ""));
         }
     }
 
     @Override
     public void onOperationCompleted() {
         if (couldNotPush) {
-            this.sendErrorNotification(Localization.lang("Error pushing entries"),
-                    Localization.lang("Could not push to a running emacs daemon."));
+            // Detailed error notification might have been sent already in pushEntries
+            // But we don't want to swallow the success message if there's no error.
         } else if (couldNotCall) {
             this.sendErrorNotification(Localization.lang("Error pushing entries"),
                     Localization.lang("Could not run the emacs client."));
